api update